[gd_scene load_steps=11 format=3 uid="uid://51t4dp5dm88f"]

[ext_resource type="Texture2D" uid="uid://i6djldglvotl" path="res://UI/Assets/xp_bar.png" id="1_3aabu"]
[ext_resource type="Script" path="res://UI/UI_Inventory.gd" id="1_3hr7y"]
[ext_resource type="Script" path="res://UI/Player_Profil_UI.gd" id="1_685e6"]
[ext_resource type="Script" path="res://UI/user_interface.gd" id="1_xgc7s"]
[ext_resource type="Script" path="res://UI/XP_bar.gd" id="4_wb5qm"]
[ext_resource type="Script" path="res://UI/UI_logs.gd" id="4_wenhx"]
[ext_resource type="Texture2D" uid="uid://4xxhkwn7535k" path="res://Sprites/UI_icon/buff_arrow.png" id="5_lewjm"]
[ext_resource type="Script" path="res://UI/Enemy_Profil_UI.gd" id="5_xsdpy"]
[ext_resource type="Script" path="res://UI/interface_down.gd" id="6_tu6kf"]
[ext_resource type="Script" path="res://UI/Enemy_Inventory_UI.gd" id="7_clhvp"]

[node name="User_Interface" type="CanvasLayer"]
script = ExtResource("1_xgc7s")
metadata/_edit_vertical_guides_ = [784.0]

[node name="MarginContainer_right" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1048.0
grow_horizontal = 2
grow_vertical = 2

[node name="white_bg_right" type="ColorRect" parent="MarginContainer_right"]
layout_mode = 2
mouse_filter = 1

[node name="interface_right" type="ColorRect" parent="MarginContainer_right/white_bg_right"]
layout_mode = 0
offset_left = 8.0
offset_right = 232.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_3hr7y")

[node name="UI_Inventory" type="ScrollContainer" parent="MarginContainer_right/white_bg_right/interface_right"]
layout_mode = 2
offset_left = 7.0
offset_top = 16.0
offset_right = 216.0
offset_bottom = 224.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer_right/white_bg_right/interface_right/UI_Inventory"]
layout_mode = 2

[node name="Validation_menu" type="Control" parent="MarginContainer_right/white_bg_right/interface_right"]
layout_mode = 1
anchor_left = 0.031
anchor_top = 0.022
anchor_right = 0.031
anchor_bottom = 0.022
offset_left = 0.0559998
offset_top = 0.159999
offset_right = 209.056
offset_bottom = 248.16
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer_right/white_bg_right/interface_right/Validation_menu"]
layout_mode = 2
offset_top = 209.0
offset_right = 209.0
offset_bottom = 240.0

[node name="Validation" type="HBoxContainer" parent="MarginContainer_right/white_bg_right/interface_right/Validation_menu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 15

[node name="Use_button" type="Button" parent="MarginContainer_right/white_bg_right/interface_right/Validation_menu/MarginContainer/Validation"]
layout_mode = 2
text = "Utiliser"

[node name="Throw_button" type="Button" parent="MarginContainer_right/white_bg_right/interface_right/Validation_menu/MarginContainer/Validation"]
layout_mode = 2
text = "Jeter"

[node name="Cancel_button" type="Button" parent="MarginContainer_right/white_bg_right/interface_right/Validation_menu/MarginContainer/Validation"]
layout_mode = 2
text = "Annuler"

[node name="Player_Profil" type="Control" parent="MarginContainer_right/white_bg_right/interface_right"]
anchors_preset = 0
offset_left = 8.0
offset_top = 272.0
offset_right = 200.0
offset_bottom = 704.0
script = ExtResource("1_685e6")

[node name="LVL" type="Label" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil"]
layout_mode = 2
offset_top = 8.0
offset_right = 64.0
offset_bottom = 34.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
text = "Niveau:"

[node name="XP" type="Label" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil"]
layout_mode = 2
offset_left = 112.0
offset_top = 8.0
offset_right = 168.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 18
text = "Exp:"

[node name="CP" type="Label" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil"]
layout_mode = 2
offset_top = 40.0
offset_right = 192.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 18
text = "Point de compétence:"

[node name="XP_bar_bg" type="ColorRect" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil"]
custom_minimum_size = Vector2(67, 10)
layout_mode = 0
offset_top = 72.0
offset_right = 66.0
offset_bottom = 81.0

[node name="XP_bar" type="TextureProgressBar" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil"]
layout_mode = 0
offset_left = 2.0
offset_top = 74.0
offset_right = 86.0
offset_bottom = 82.0
texture_under = ExtResource("1_3aabu")
texture_progress = ExtResource("1_3aabu")
tint_under = Color(0, 0, 0, 1)
tint_over = Color(0, 0, 0, 1)
script = ExtResource("4_wb5qm")

[node name="Player_Calculated_Stats" type="Control" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil"]
anchors_preset = 0
offset_left = 1.0
offset_top = 88.0
offset_right = 208.0
offset_bottom = 174.0

[node name="HP" type="Label" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Calculated_Stats"]
layout_mode = 2
offset_right = 207.0
offset_bottom = 26.0
text = "HP:"

[node name="HBoxContainer_CRT" type="HBoxContainer" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Calculated_Stats"]
layout_mode = 0
offset_left = -1.0
offset_top = 61.0
offset_right = 199.0
offset_bottom = 84.0
theme_override_constants/separation = -2

[node name="CRT" type="RichTextLabel" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Calculated_Stats/HBoxContainer_CRT"]
layout_mode = 2
bbcode_enabled = true
text = "Critique:"
fit_content = true
autowrap_mode = 0

[node name="Arrow_Up" type="TextureRect" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Calculated_Stats/HBoxContainer_CRT"]
visible = false
layout_mode = 2
texture = ExtResource("5_lewjm")
expand_mode = 2
stretch_mode = 2

[node name="HBoxContainer_MT" type="HBoxContainer" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Calculated_Stats"]
layout_mode = 0
offset_left = -1.0
offset_top = 29.0
offset_right = 199.0
offset_bottom = 52.0
theme_override_constants/separation = -2

[node name="MT" type="RichTextLabel" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Calculated_Stats/HBoxContainer_MT"]
layout_mode = 2
bbcode_enabled = true
text = "Dégâts Totaux:"
fit_content = true
autowrap_mode = 0

[node name="Arrow_Up" type="TextureRect" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Calculated_Stats/HBoxContainer_MT"]
visible = false
layout_mode = 2
texture = ExtResource("5_lewjm")
expand_mode = 2
stretch_mode = 2

[node name="Player_Stats" type="VBoxContainer" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil"]
layout_mode = 2
offset_left = 1.0
offset_top = 184.0
offset_right = 40.0
offset_bottom = 370.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 14

[node name="STR" type="Label" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats"]
layout_mode = 2
text = "STR:"

[node name="DEX" type="Label" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats"]
layout_mode = 2
text = "DEX:"

[node name="DEF" type="Label" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats"]
layout_mode = 2
text = "DEF:"

[node name="MVT" type="Label" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats"]
layout_mode = 2
text = "MVT:"

[node name="ACT" type="Label" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats"]
layout_mode = 2
text = "ACT:"

[node name="Button_Stat" type="Node2D" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats"]
visible = false
position = Vector2(13, 197)

[node name="HBoxContainer_STR" type="HBoxContainer" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat"]
offset_left = 89.0
offset_top = -202.0
offset_right = 125.0
offset_bottom = -171.0

[node name="plus_STR_button" type="Button" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_STR"]
layout_mode = 2
text = "+"

[node name="minus_STR_button" type="Button" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_STR"]
layout_mode = 2
text = "-"

[node name="HBoxContainer_DEX" type="HBoxContainer" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat"]
offset_left = 89.0
offset_top = -163.0
offset_right = 125.0
offset_bottom = -132.0

[node name="plus_DEX_button" type="Button" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_DEX"]
layout_mode = 2
text = "+"

[node name="minus_DEX_button" type="Button" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_DEX"]
layout_mode = 2
text = "-"

[node name="HBoxContainer_DEF" type="HBoxContainer" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat"]
offset_left = 89.0
offset_top = -123.0
offset_right = 125.0
offset_bottom = -92.0

[node name="plus_DEF_button" type="Button" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_DEF"]
layout_mode = 2
text = "+"

[node name="minus_DEF_button" type="Button" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_DEF"]
layout_mode = 2
text = "-"

[node name="HBoxContainer_Validation" type="HBoxContainer" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat"]
visible = false
offset_left = 40.0
offset_top = -91.0
offset_right = 177.0
offset_bottom = -60.0

[node name="Validation_button" type="Button" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_Validation"]
layout_mode = 2
text = "Valider"

[node name="Cancel_button" type="Button" parent="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_Validation"]
layout_mode = 2
text = "Annuler"

[node name="MarginContainer_left" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1048.0
grow_horizontal = 2
grow_vertical = 2

[node name="white_bg_left" type="ColorRect" parent="MarginContainer_left"]
layout_mode = 2

[node name="interface_left" type="ColorRect" parent="MarginContainer_left/white_bg_left"]
layout_mode = 0
offset_right = 224.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="UI_logs" type="ScrollContainer" parent="MarginContainer_left/white_bg_left/interface_left"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 216.0
offset_bottom = 296.0
script = ExtResource("4_wenhx")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer_left/white_bg_left/interface_left/UI_logs"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer_left/white_bg_left/interface_left/UI_logs/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer_left/white_bg_left/interface_left/UI_logs/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 17

[node name="Enemy_Profil" type="Control" parent="MarginContainer_left/white_bg_left/interface_left"]
visible = false
anchors_preset = 0
offset_left = 24.0
offset_top = 280.0
offset_right = 216.0
offset_bottom = 704.0
script = ExtResource("5_xsdpy")

[node name="Enemy_Calculated_Stats" type="VBoxContainer" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil"]
layout_mode = 0
offset_top = 61.0
offset_right = 192.0
offset_bottom = 177.0
theme_override_constants/separation = 7
alignment = 1

[node name="HP" type="Label" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/Enemy_Calculated_Stats"]
layout_mode = 2
text = "HP:"

[node name="HBoxContainer_MT" type="HBoxContainer" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/Enemy_Calculated_Stats"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="MT" type="RichTextLabel" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/Enemy_Calculated_Stats/HBoxContainer_MT"]
layout_mode = 2
bbcode_enabled = true
text = "Dégâts Totaux:"
fit_content = true
autowrap_mode = 0

[node name="Arrow_Up" type="TextureRect" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/Enemy_Calculated_Stats/HBoxContainer_MT"]
visible = false
layout_mode = 2
texture = ExtResource("5_lewjm")
expand_mode = 2
stretch_mode = 2

[node name="HBoxContainer_CRT" type="HBoxContainer" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/Enemy_Calculated_Stats"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="CRT" type="RichTextLabel" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/Enemy_Calculated_Stats/HBoxContainer_CRT"]
layout_mode = 2
bbcode_enabled = true
text = "Critique:"
fit_content = true
autowrap_mode = 0

[node name="Arrow_Up" type="TextureRect" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/Enemy_Calculated_Stats/HBoxContainer_CRT"]
visible = false
layout_mode = 2
texture = ExtResource("5_lewjm")
expand_mode = 2
stretch_mode = 2

[node name="Label" type="Label" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/Enemy_Calculated_Stats"]
layout_mode = 2

[node name="Enemy_Stats" type="VBoxContainer" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil"]
layout_mode = 0
offset_top = 151.0
offset_right = 39.0
offset_bottom = 309.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 7

[node name="STR" type="Label" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/Enemy_Stats"]
layout_mode = 2
text = "STR:"

[node name="DEX" type="Label" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/Enemy_Stats"]
layout_mode = 2
text = "DEX:"

[node name="DEF" type="Label" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/Enemy_Stats"]
layout_mode = 2
text = "DEF:"

[node name="MVT" type="Label" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/Enemy_Stats"]
layout_mode = 2
text = "MVT:"

[node name="ACT" type="Label" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/Enemy_Stats"]
layout_mode = 2
text = "ACT:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil"]
layout_mode = 0
offset_top = 34.0
offset_right = 156.0
offset_bottom = 60.0
theme_override_constants/separation = 20

[node name="Name" type="Label" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/HBoxContainer"]
layout_mode = 2
text = "Nom:"

[node name="LVL" type="Label" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Profil/HBoxContainer"]
layout_mode = 2
text = "Niveau:"

[node name="Enemy_Inventory_UI" type="Control" parent="MarginContainer_left/white_bg_left/interface_left"]
visible = false
anchors_preset = 0
offset_left = 23.0
offset_top = 597.0
offset_right = 191.0
offset_bottom = 693.0
script = ExtResource("7_clhvp")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Inventory_UI"]
layout_mode = 0
offset_left = 1.0
offset_right = 169.0
offset_bottom = 96.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer_left/white_bg_left/interface_left/Enemy_Inventory_UI/ScrollContainer"]
layout_mode = 2

[node name="MarginContainer_down" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -408.0
offset_top = -40.0
offset_right = 408.0
grow_horizontal = 2
grow_vertical = 0

[node name="interface_down" type="Control" parent="MarginContainer_down"]
layout_mode = 2
script = ExtResource("6_tu6kf")

[node name="Attack_button" type="Button" parent="MarginContainer_down/interface_down"]
layout_mode = 2
anchor_left = 0.225
anchor_right = 0.225
offset_left = 80.4
offset_right = 216.4
offset_bottom = 36.0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "Attaquer
"

[node name="Wait_button" type="Button" parent="MarginContainer_down/interface_down"]
layout_mode = 2
anchor_left = 0.029
anchor_top = 0.4
anchor_right = 0.029
anchor_bottom = 0.4
offset_left = 392.336
offset_top = -16.0
offset_right = 528.336
offset_bottom = 20.0
theme_override_font_sizes/font_size = 20
text = "Attendre"

[connection signal="pressed" from="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_STR/plus_STR_button" to="MarginContainer_right/white_bg_right/interface_right/Player_Profil" method="_on_plus_str_button_pressed"]
[connection signal="pressed" from="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_STR/minus_STR_button" to="MarginContainer_right/white_bg_right/interface_right/Player_Profil" method="_on_minus_str_button_pressed"]
[connection signal="pressed" from="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_DEX/plus_DEX_button" to="MarginContainer_right/white_bg_right/interface_right/Player_Profil" method="_on_plus_dex_button_pressed"]
[connection signal="pressed" from="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_DEX/minus_DEX_button" to="MarginContainer_right/white_bg_right/interface_right/Player_Profil" method="_on_minus_dex_button_pressed"]
[connection signal="pressed" from="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_DEF/plus_DEF_button" to="MarginContainer_right/white_bg_right/interface_right/Player_Profil" method="_on_plus_def_button_pressed"]
[connection signal="pressed" from="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_DEF/minus_DEF_button" to="MarginContainer_right/white_bg_right/interface_right/Player_Profil" method="_on_minus_def_button_pressed"]
[connection signal="pressed" from="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_Validation/Validation_button" to="MarginContainer_right/white_bg_right/interface_right/Player_Profil" method="_on_validation_button_pressed"]
[connection signal="pressed" from="MarginContainer_right/white_bg_right/interface_right/Player_Profil/Player_Stats/Button_Stat/HBoxContainer_Validation/Cancel_button" to="MarginContainer_right/white_bg_right/interface_right/Player_Profil" method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MarginContainer_down/interface_down/Attack_button" to="MarginContainer_down/interface_down" method="_on_attack_button_pressed"]
[connection signal="pressed" from="MarginContainer_down/interface_down/Wait_button" to="MarginContainer_down/interface_down" method="_on_wait_button_pressed"]
